fix en el scrollbar de las listas

--- a/components/productList/list.module.css
+++ b/components/productList/list.module.css
@@ -15,8 +15,9 @@
   max-width: 100%;
   overflow-x: auto;
   overflow-x: overlay;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   height: min-content;
+  padding-bottom: 15px;
 }
 .item {
   min-width: 250px;
